# cmptypeplugin

./: .gitignore  cmptypeplugin.cabal  stack.yaml
src/: Plugin.hs
test/: Spec.hs
